# arbitrage-bot

./: Cargo.toml
contracts/: FlashLoan.sol
src/: balancer.rs  client.rs  config.rs  contract_interfaces.rs  contracts.rs  lib.rs  main.rs  uniswap_v2.rs  utils.rs
src/data/1/: Balancer.config.json  Pancakeswap.config.json  Sushiswap.config.json  UniswapV2.config.json
