[package]
name = "arbitrage-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "1.0.2", features = ["rustls"] }
eyre = "0.6.8"
tokio = { version = "1.23.0", features = ["full", "macros"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
